src/objects/Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>To Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>